[tool.poetry]
name = "flights"
version = "0.1.0"
description = ""
authors = ["Dow Draper <dow.h.draper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
seaborn = "^0.12.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
jupyterlab = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
