[tool.poetry]
name = "flights"
version = "0.1.0"
description = ""
authors = ["Dow Draper <dow.h.draper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
seaborn = "^0.12.2"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.2"
scikit-learn = "^1.2.2"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
